--- a/Sources/package.json
+++ b/Sources/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "repository": {},
   "devDependencies": {
-    "@fitbit/sdk": "~3.0.0",
-    "@fitbit/sdk-cli": "^1.5.0",
-    "fitbit-sdk-types": "^3.0.0"
+    "@fitbit/sdk": "~3.1.0",
+    "@fitbit/sdk-cli": "^1.6.0",
+    "fitbit-sdk-types": "4.0.0"
   },
   "fitbit": {
     "appUUID": "3c57407a-936a-4305-9f93-00895a42ef68",
@@ -19,7 +19,8 @@
     ],
     "buildTargets": [
       "higgs",
-      "meson"
+      "meson",
+      "gemini"
     ],
     "i18n": {},
     "defaultLanguage": "en-US"
